# cerebral

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: publish-to-pypi.yml
cerebral/: GFA.py  __init__.py  features.py  io.py  kfolds.py  layers.py  loss.py  metrics.py  models.py  novelty.py  permutation.py  plots.py  tuning.py
docs/source/: api.rst  conf.py
examples/: Dmax.py  data.csv
tests/: CuZr_prices.csv  CuZr_prices.py  test_CuZr_prices.py
