[metadata]
name = cerebral
author = Robert Forrest
author_email = robertforrest@live.com
description = Tool for creating multi-output deep ensemble neural-networks 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Robert-Forrest/cerebral
license = BSD 3-Clause License
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = cerebral
python_requires = >=3.8
install_requires =
    click
    adjustText
    elementy
    kt_legacy
    matplotlib
    metallurgy >= 0.0.13
    numpy
    omegaconf
    pandas
    scikit_learn >= 1.1.3
    scipy
    seaborn
    setuptools
    tensorflow
    pydot
    keras-tuner


[options.entry_points]
console_scripts = 
    # exename = package.module:funcname

[options.extras_require]
dev =
    pre-commit
    black
    tox ==3.24.3
    pytest ==6.2.5
    pytest-cov ==2.12.1

[options.package_data]
cerebral = py.typed

[flake8]
max-line-length = 79
